{
    "name": "InputController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "39050611-69a8-4977-80ce-3ba7d3e554c8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6a9dbbfd-904b-481e-a74f-7fb0c90212bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "42a23eea-6ce7-490e-9d48-48bd1bb52ee4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "740e0428-75f2-4393-8f60-c6065483eef7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "4a51a7d8-3502-4e20-8925-a96408207068",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeTarget",
                    "type": "Value",
                    "id": "a6b95da8-10fd-4475-b197-e7b8ec43e915",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82c99939-4112-4f45-83dc-f3febf5123c2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7932b3cd-0025-44ae-823e-5ebe5d65b2b3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "03dbd930-0b1f-4283-83a4-3260b7451cfb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4ad06a3f-f472-42c4-98b2-9fe5a2238f94",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1a1b9902-b230-4326-9c20-c3d1920c3771",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "072ad253-1f89-4376-9b96-e36bbfcecf41",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6c968b5e-50ef-4915-9be0-4a5b23860af9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2f9c397-97a5-4963-a8d8-db6f44a1d1d5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2efe8423-f10a-46fd-8c17-b50d1efafe41",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=50,y=50)",
                    "groups": "GamePad",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32bb940b-61bf-467b-96f7-54d5069cc92d",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "PC",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7deec5c9-3602-47d8-a9e3-f0dc29aa98f3",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f95bae44-c1d5-475e-820e-e5c2ba0143bd",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55af789c-7035-42b8-b1a8-42afe983470f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Clamp(min=-1,max=1)",
                    "groups": "PC",
                    "action": "ChangeTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3242542-c8b0-40a4-8b39-b5ddb27e3636",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "ChangeTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": []
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}