{
    "name": "InputControls",
    "maps": [
        {
            "name": "PlayerNormal",
            "id": "39050611-69a8-4977-80ce-3ba7d3e554c8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6a9dbbfd-904b-481e-a74f-7fb0c90212bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "42a23eea-6ce7-490e-9d48-48bd1bb52ee4",
                    "expectedControlType": "Button",
                    "processors": "",   
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82c99939-4112-4f45-83dc-f3febf5123c2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c968b5e-50ef-4915-9be0-4a5b23860af9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": []
        }
    ]
}